--- a/css/style.css
+++ b/css/style.css
@@ -171,3 +171,47 @@ main {
     background-color: #bdb1ca;
     border: solid 3px #8f69bb;
 }
+
+.modal {
+    position: fixed;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    width: 20%;
+    padding: 2rem;
+    border-radius: 10px;
+    background-color: #2E2E2E;
+    color: #EDEDED;
+    text-align: center;
+    user-select: none;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 200ms ease-in-out;
+}
+
+.modal h3 {
+    margin: 2rem 0;
+}
+
+.modal.active {
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.modal-title {
+    font-size: 40px;
+    font-weight: bold;
+}
+
+#overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.6;
+}
+
+#overlay.active {
+    display: block;
+}
